# nix-docker-test

./: README.md  flake.nix  pyproject.toml  test.yaml
app/: main.py
