[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "6.0.1"

[tool.poetry.scripts]
app = "app.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
